Add env for call API home assistant

--- a/.env_example
+++ b/.env_example
@@ -8,7 +8,12 @@ CURRENT_GID=
 ADMIN_MAIL=
 TZ=Europe/Paris
 
-
+#CONTAINER ADHAN
 CONTAINER_NAME_ADHAN=adhan_home
-
 URL_MOSQUE=
+
+#CALL API HOMEASSISTANT
+URL_HOMEASSISTANT=
+TOKEN=
+SERVICE=
+ENTITY_ID=
