--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
         - CURRENT_UID=${CURRENT_UID}
     container_name: ${CONTAINER_NAME_ADHAN:-adhan-home}
     env_file: .env
+    restart: always
 
   homeassistant:
     container_name: homeassistant
@@ -22,7 +23,7 @@ services:
       - VOLUME_HOME_ASSISTANT:/config
       - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro
-    restart: unless-stopped
+    restart: always
     privileged: true
     network_mode: host
     #For use Zigbee
