--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,5 +1,9 @@
 FROM debian:buster
 
+RUN sed -i 's|http://deb.debian.org/debian|http://archive.debian.org/debian|g' /etc/apt/sources.list && \
+    sed -i 's|http://security.debian.org|http://archive.debian.org/debian-security|g' /etc/apt/sources.list && \
+    echo 'Acquire::Check-Valid-Until "false";' > /etc/apt/apt.conf.d/99no-check-valid-until
+
 ARG CURRENT_USER \
     CURRENT_UID \
     TZ
