Finish run adhan with owntone

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,6 @@
 #Project name
 COMPOSE_PROJECT_NAME=adhan_home
+LOG_LEVEL=DEBUG
 
 #GENERAL
 CURRENT_USER=
@@ -22,6 +23,9 @@ ENTITY_ID=
 PATH_CRON=
 
 #OWNTONE
-PATH_CONFIG=
-PATH_MEDIA=
-PATH_CACHE=
+OWNTONE_HOST=""
+OWNTONE_PORT="3689"
+ADHAN_FILE="/srv/media/adhan.mp3"
+# PATH_CONFIG="/Users/sebastienauvray/Music/Owntone/etc"
+# PATH_MEDIA="/Users/sebastienauvray/Music/Owntone/media"
+# PATH_CACHE="/Users/sebastienauvray/Music/Owntone/cache"
