--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -17,6 +17,8 @@ RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
     cron  \
+    jq \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 #TIMEZONE
@@ -59,6 +61,10 @@ RUN chmod +x /app/adhan.sh
 #SCRIPT PYTHON FOR API HOMEASSISTANT
 COPY ./next_salat.py /app/next_salat.py
 RUN chmod +x /app/next_salat.py
+
+#JSON FOR SELECTING HOMEPODS
+COPY ./HomePod.json /app/HomePod.json
+RUN chmod +x /app/HomePod.json
 
 #CRON
 ADD ./salat.crontab /etc/cron.d/salat.crontab
