--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     container_name: ${CONTAINER_NAME_ADHAN:-adhan-home}
     env_file: .env
     restart: always
-
+    # volumes:
+    #   - ./:/var/www/html
   homeassistant:
     container_name: homeassistant
     image: "ghcr.io/home-assistant/home-assistant:stable"
