Add env for homepod file json

--- a/.env_example
+++ b/.env_example
@@ -25,6 +25,7 @@ PATH_CRON=
 #OWNTONE
 OWNTONE_HOST=""
 OWNTONE_PORT="3689"
+HOMEPOD_FILE="/app/HomePod.json"
 ADHAN_FILE="/srv/media/adhan.mp3"
 # PATH_CONFIG="/Users/sebastienauvray/Music/Owntone/etc"
 # PATH_MEDIA="/Users/sebastienauvray/Music/Owntone/media"
