Check if morning to set volume for adhan

--- a/.env_example
+++ b/.env_example
@@ -27,6 +27,7 @@ OWNTONE_HOST=""
 OWNTONE_PORT="3689"
 HOMEPOD_FILE="/app/HomePod.json"
 ADHAN_FILE="/srv/media/adhan.mp3"
+ADHAN_VOLUME="40"
 # PATH_CONFIG="/Users/sebastienauvray/Music/Owntone/etc"
 # PATH_MEDIA="/Users/sebastienauvray/Music/Owntone/media"
 # PATH_CACHE="/Users/sebastienauvray/Music/Owntone/cache"
